--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <h1>TRAVEL AGENCY<span class="orange">.</span></h1>   
                     <nav>
                         <ul>
-                            <li><a href="main-image">Acceuil </a></li>
-                            <li><a href="steps">Destinations</a> </li>
-                            <li><a href="possibilities">Circuits</a>
-                            <li> <a href="contact">Contact</a></li>
+                            <li><a href="#main-image">Acceuil </a></li>
+                            <li><a href="#steps">Destinations</a> </li>
+                            <li><a href="#possibilities">Circuits</a>
+                            <li> <a href="#contact">Contact</a></li>
                         </ul>
                 </nav>
             </DIV>
@@ -28,7 +28,7 @@
          <div class="wrapper">
             <h2>Organisez votre<br><strong>voyage sur mesure
                 </strong></h2>
-                <a href="#" class="button-1">Par ici</a>
+                <a href="www.booking.com" class="button-1">Par ici</a>
         </div>
     </SECTION>
     
