--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <div class="wrapper">
             <h2>Organisez votre<br><strong>voyage sur mesure
                 </strong></h2>
-                <a href="www.booking.com" class="button-1">Par ici</a>
+                <a href="https://www.booking.com" class="button-1">Par ici</a>
         </div>
     </SECTION>
     
